@@ -3,3 +3,4 @@
 - Update the --help output to match the recent changes.
 - Clean up the code a bit.
 - Update documentation with recent changes (UI, cmdline, ..)
+- Make libstartup-notification dependency optional.
