@@ -1,3 +1,8 @@
+2004-11-22	Benedikt Meurer <benny@xfce.org>
+
+	* terminal/Makefile.am: Include terminal-config.h.in in dist.
+	* TODO: Added note about optional startup notification dependency.
+
 2004-11-21	Benedikt Meurer <benny@xfce.org>
 
 	* terminal/terminal-enum-types.c, terminal/terminal-preferences.h: Erase
